# SistemaWebQualidade-

./: .replit  README.md  config.py  generate_docs.py  main.py  migrate_db.py  migrate_db_complete.py  migrate_groups.py  pyproject.toml  replit.md  run.py
app/: __init__.py  models.py
attached_assets/: Pasted--Debug-mode-off-2025-09-15-11-56-23-INFO-werkzeug-WARNING-This-is-a-development-server-Do-not-1757937451063_1757937451064.txt  Pasted--home-runner-workspace-pythonlibs-lib-python3-11-site-packages-flask-sqlalchemy-model-py-144-SAWar-1757772167373_1757772167374.txt  Pasted-2025-09-15-13-50-11-INFO-werkzeug-WARNING-This-is-a-development-server-Do-not-use-it-in-a-product-1757944457826_1757944457827.txt  Pasted-2025-09-15-15-34-14-WARNING-app-Could-not-create-default-admin-user-psycopg2-errors-UndefinedColu-1757950509916_1757950509917.txt  Pasted-Para-implementar-o-Quill-Editor-no-seu-sistema-instale-o-via-npm-com-npm-install-quill-crie-um-ele-1758088061967_1758088061968.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-p-1757772801903_1757772801904.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-p-1757948722729_1757948722730.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-p-1757949228983_1757949228984.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-p-1757950658888_1757950658889.txt  📑 SPEC ATUALIZAdo1_1757700782620.docx  (+2 more)
docs/: Makefile  conf.py  faq.rst  (+2 more)
(+72 files in other folders)
